Partial view fix (#19)
* Update font color of progress bar

* dashboard spacing adjustment (#7)


* left_nav_color

* Adjust verify_mnemonic‘s page constructure、scrollbar and  header to be aligned (#10)

-update create_mnemonic's column display
-Adjust verify_mnemonic‘s page constructure、scrollbar and  header to be aligned

* PR#19: use linear gradient for active page navigator item

--- a/src/components/MnemonicVerification/MnemonicVerification.less
+++ b/src/components/MnemonicVerification/MnemonicVerification.less
@@ -15,7 +15,7 @@
  */
  
 .mnemonic_container {
-  width: 80%;
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -48,6 +48,10 @@
       opacity: 0.7;
     }
 
+  }
+
+  .mnemonicWordDiv::-webkit-scrollbar {
+    width: 5px;
   }
 
   .wordDiv {
