--- a/src/views/pages/accounts/create-account/CreateAccount.less
+++ b/src/views/pages/accounts/create-account/CreateAccount.less
@@ -23,10 +23,9 @@
   overflow-y: auto;
 
   .inner-container {
-    height: 100%;
     .create-account-box {
-      margin-bottom: 30px;
-      font-size: 35px;
+      margin-bottom: 40px;
+      font-size: 40px;
       color: rgba(0, 0, 0, 0.85);
       line-height: 40px;
     }
