--- a/src/views/pages/accounts/create-account/show-mnemonic/ShowMnemonic.less
+++ b/src/views/pages/accounts/create-account/show-mnemonic/ShowMnemonic.less
@@ -20,13 +20,15 @@
   position: relative;
 
   .create-mnemonic-col {
-    display: flex;
+    display: grid;
+    grid-template-columns: 9.5rem 4.66rem;
+    column-gap: 0.8rem;
 
     .create-mnemonic-left {
-      width: 950px;
+      width: 100%;
 
       .show-mnemonic {
-        width: 950px;
+        width: 100%;
         height: 260px;
         display: flex;
         align-items: center;
@@ -45,8 +47,7 @@
     }
 
     .create-mnemonic-right {
-      padding-left: 80px;
-      width: 510px;
+      width: 100%;
     }
   }
 
