--- a/src/views/pages/accounts/create-account/verify-mnemonic/VerifyMnemonic.less
+++ b/src/views/pages/accounts/create-account/verify-mnemonic/VerifyMnemonic.less
@@ -19,7 +19,7 @@
 
   .skip {
     float: right;
-    margin-right: 700px;
+    margin-right: 550px;
     font-size: 20px;
     color: #5200c6;
     width: 100px;
@@ -27,13 +27,15 @@
   }
 
   .check-mnemonic-col {
-    display: flex;
+    display: grid;
+    grid-template-columns: 9.5rem 4.66rem;
+    column-gap: 0.8rem;
 
     .check-mnemonic-left {
-      width: 1000px;
+      width: 100%;
 
       .show-mnemonic {
-        width: 1300px;
+        width: 100%;
         height: 190px;
         border: 1px solid rgba(51, 51, 51, 0.2);
         border-radius: 5px;
@@ -47,7 +49,7 @@
     }
 
     .check-mnemonic-right {
-      width: 530px;
+      width: 100%;
 
     }
   }
